Fix: text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@
   margin: 0;
   padding: 5px;
   height: 50%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .ProtocolFieldName
